--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ numpy==1.18.5
 PyYAML==5.3.1
 psycopg2-binary==2.8.6
 opencv-python==4.5.1.48
-torch==1.7.1
-torchvision==0.8.2
+torch==1.7.1+cpu
+torchvision==0.8.2+cpu
 scipy==1.5.4
 whitenoise==5.2.0
